Correct the behavior on telecom filter: scroll up and hide filter on mobile

--- a/public/frontv1/css/main.css
+++ b/public/frontv1/css/main.css
@@ -2457,7 +2457,8 @@ ul.opertors-details li {
   margin: 0 1rem;
 }
 
-.toggle-filter {
+.toggle-filter,
+.filter-button {
   padding: 1px 3px;
   box-shadow: 1px 1px 3px #dedcdc;
   border-radius: 4px;
